syntax = "proto3";

package menu;

option go_package = "./pkg/pb";

import "google/protobuf/field_mask.proto";

service MenuService {
  rpc CreateFoodItem(CreateFoodRequest) returns (CreateFoodResponse) {}
  rpc DeleteFoodItem(DeleteFoodRequest) returns (DeleteFoodResponse) {}
  rpc updateFoodItem(UpdateFoodRequest) returns (UpdateFoodResponse) {}
  rpc GetFoodItems(GetFoodRequest) returns (GetFoodResponse) {}
}

message FoodItem {
  int64 id = 1;
  int64 merchantId = 2;
  string name = 3;
  string description = 4;
  double price = 5;
}

message CreateFoodRequest {
  FoodItem foodItem = 1; 
}

message CreateFoodResponse {
  int64 status = 1;
  string error = 2;
}

message DeleteFoodRequest {
  int64 id = 1;
}

message DeleteFoodResponse {
  int64 status = 1;
  string error = 2;
}

message GetFoodRequest {
  int64 merchantId = 1;
}

message GetFoodResponse {
  int64 status = 1;
  string error = 2;
  repeated FoodItem foodItems = 3;
}

message UpdateFoodRequest { 
  FoodItem foodItem = 1;
  google.protobuf.FieldMask updateMask = 2;
}

message UpdateFoodResponse {
  int64 status = 1;
  string error = 2;
}